--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -3,6 +3,7 @@ include ../../mixin/filter-status.pug
 include ../../mixin/form-search.pug
 include ../../mixin/pagination.pug
 include ../../mixin/box-actions.pug
+include ../../mixin/sort.pug
 block main
   h1(class="mb-4") Quản lý sản phẩm
   .card.mb-3
@@ -18,23 +19,7 @@ block main
     .card-body
       .row
         .col-4
-          div(sort)
-            select(
-              class="form-control"
-              name="sort"
-              sort-select
-            )
-              option(value="position-desc") Vị trí giảm dần
-              option(value="position-asc") Vị trí tăng dần
-              option(value="price-desc") Giá giảm dần
-              option(value="price-asc") Giá tăng dần
-              option(value="title-asc") Tiêu đề A - Z
-              option(value="title-desc") Tiêu đề Z - A
-
-            button(
-              class="btn btn-danger mt-2"
-              sort-clear
-            ) Clear
+          +sort()
   .card.mb-3
     .card-header Chuyển Trạng Thái
     .card-body 
